--- a/prowlarr/config.json
+++ b/prowlarr/config.json
@@ -19,7 +19,7 @@
     "log_level": "info"
   },
   "schema": {
-    "log_level": "list(debug|info|warning|error)?",
+    "log_level": "list(debug|info|warning|error)?"
   },
   "environment": {
     "HOST": "0.0.0.0",
