--- a/prowlarr/config.yaml
+++ b/prowlarr/config.yaml
@@ -8,16 +8,14 @@ arch:
   - amd64
 init: false
 map:
-  - config:rw
+  - addon_config:rw
   - share:rw
   - media:rw
-  - ssl
 ports:
   9696/tcp: 9696
 ports_description:
   9696/tcp: Prowlarr WEB UI
 webui: "http://[HOST]:[PORT:9696]"
-healthcheck: "http://[HOST]:[PORT:9696]/api/v1/health"
 options:
   log_level: info
 schema:
