--- a/ygege/config.yaml
+++ b/ygege/config.yaml
@@ -1,6 +1,6 @@
 ---
 name: Ygégé
-version: "1.0.3"
+version: "1.0.4"
 slug: ygege
 description: High-performance YGG Torrent indexer with automatic Cloudflare bypass
 url: https://github.com/UwUDev/ygege
@@ -26,5 +26,5 @@ schema:
   log_level: list(debug|info|warning|error)?
   imdb_enabled: bool?
   tmdb_enabled: bool?
-  ygg_username: str
-  ygg_password: password
+  ygg_username: str?
+  ygg_password: password?
