--- a/ygege/config.yaml
+++ b/ygege/config.yaml
@@ -1,6 +1,6 @@
 ---
 name: Ygégé
-version: "1.0.4"
+version: "1.0.5"
 slug: ygege
 description: High-performance YGG Torrent indexer with automatic Cloudflare bypass
 url: https://github.com/UwUDev/ygege
@@ -28,3 +28,6 @@ schema:
   tmdb_enabled: bool?
   ygg_username: str?
   ygg_password: str?
+environment:
+  YGG_USERNAME: "test"
+  YGG_PASSWORD: "test"
