--- a/ygege/Dockerfile
+++ b/ygege/Dockerfile
@@ -31,4 +31,4 @@ ENTRYPOINT ["/run.sh"]
 
 # Health check
 HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
-  CMD wget --quiet --tries=1 --spider http://localhost:8715/ || exit 1
+  CMD wget --quiet --tries=1 --spider http://localhost:8715/health || exit 1
