--- a/ygege/config.yaml
+++ b/ygege/config.yaml
@@ -1,6 +1,6 @@
 ---
 name: Ygégé
-version: "1.0.6"
+version: "1.0.7"
 slug: ygege
 description: High-performance YGG Torrent indexer with automatic Cloudflare bypass
 url: https://github.com/UwUDev/ygege
@@ -27,4 +27,4 @@ schema:
   imdb_enabled: bool?
   tmdb_enabled: bool?
   ygg_username: str?
-  ygg_password: str?
+  ygg_password: password?
